--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#MYSQL
+spring.datasource.url = jdbc:mysql://localhost:3306/department_demo_mvc?createDatebaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password = root
 
-spring.h2.console.enabled=true
+#JPA
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
+spring.jpa.open-in-view= true
